# ncurses-espeak-cli

./: .gitignore  CMakeLists.txt  README.md  input.h  main.cpp  makefile  screen.cpp  screen.h  speachsynth.h  speechsynth.h
src/: main.cpp  screen.cpp  speechsynth.cpp  speechsynth.h
